# spectrometer_analysis

./: check_alignment_soren_compatible.py  check_cent_align_csv.py  read_spectrum_data.py  test_data.xls
Base_Core/: .gitignore  README.md  pyproject.toml
Base_Core/base_core/fitting/: functions.py  models.py
Base_Core/base_core/framework/app/: context.py  enums.py
Base_Core/base_core/framework/concurrency/: buffer.py  interfaces.py  models.py  task_runner.py
Base_Core/base_core/framework/di/: container.py
Base_Core/base_core/framework/domain/: interfaces.py
Base_Core/base_core/framework/events/: event_bus.py  subscription_helpers.py
Base_Core/base_core/framework/guard/: guard.py
Base_Core/base_core/framework/json/: device_service.py  device_service_adjusted.py  json_endpoint.py  (+3 more)
Base_Core/base_core/lab_specifics/: base_models.py  helpers.py
Base_Core/base_core/math/: enums.py  functions.py  models.py  smoothing.py  special_models.py
Base_Core/base_core/physics/: circular_chirped_puls.py  molecules.py  optical_centrifuge.py
Base_Core/base_core/plotting/: covariance_plotting.py  enums.py  fit_plotting.py  histogram_plotting.py
Base_Core/base_core/quantities/: constants.py  enums.py  models.py  specific_models.py
Devices/: .gitignore  README.md  _requirements_x64.txt  pyproject.toml  setup_env.ps1  test.py
Devices/elliptec/: config.py  elliptec_ell14.py
Devices/elliptec/base/: elliptec_device.py  enums.py  exceptions.py  helpers.py
Devices/spm_002/: config.py  dll.py  enums.py  exceptions.py  models.py  spectrometer.py  spectrometer_server.py
(+33 files in other folders)
