[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "base-core"
version = "0.1.0"
description = "Common base library"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name" }
]
dependencies = [
  "numpy"
]

[tool.setuptools]
packages = ["base_core"]
